--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -6,14 +6,19 @@ body {
     font-family: Circular, "Helvetica Neue", Arial, sans-serif;
 }
 
-p {
+footer p {
     text-align: center;
+    padding: 8px;
+}
+
+p {
+    text-align: left;
     padding: 8px;
 }
 
 .container {
     max-width: 1000px;
-    margin: 30px auto 30px auto;
+    margin: 30px auto 100px auto;
 }
 
 .locations h3, .amenities h3 {
